<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.badbadbadbadbad</groupId>
    <artifactId>tsundoku</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>tsundoku</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.2</junit.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fluentui-pack</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-dashicons-pack</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.46.1.0</version>
        </dependency>

        <!-- Something in the dependencies uses SLF4J, I don't know what, this gets errors to stop -->
        <!-- https://stackoverflow.com/a/36766934 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.21</version>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>
                                com.github.badbadbadbadbad.tsundoku/com.github.badbadbadbadbad.tsundoku.TsundokuApplication
                            </mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- PACKAGING: https://github.com/fvarrui/JavaPackager -->
            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.7.6</version>
                <executions>
                    <execution>
                        <!-- LINUX PACKAGING COMMAND: mvn package -->
                        <id>bundling-for-linux</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <!-- mandatory -->
                            <mainClass>com.github.badbadbadbadbad.tsundoku.TsundokuApplication</mainClass>
                            <!-- optional -->
                            <bundleJre>true</bundleJre>
                            <customizedJre>false</customizedJre>
                            <administratorRequired>false</administratorRequired>
                            <createTarball>true</createTarball>
                            <vmArgs>
                                <vmArg>--module-path=libs</vmArg>
                                <vmArg>--add-modules=javafx.controls,javafx.fxml</vmArg>
                            </vmArgs>
                            <jdkPath>/home/bad/Desktop/jdk-21.0.4-linux</jdkPath>
                            <assetsDir>/home/bad/repos/tsundoku/src/main/resources/assets</assetsDir>
                            <platform>linux</platform>
                            <linuxConfig>
                                <pngFile>src/main/resources/assets/windows/tsundoku.png</pngFile>
                            </linuxConfig>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- WINDOWS PACKAGING COMMAND: mvn package -Djavafx.platform=win -->
                        <id>bundling-for-windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.github.badbadbadbadbad.tsundoku.TsundokuApplication</mainClass>
                            <bundleJre>true</bundleJre>
                            <customizedJre>false</customizedJre>
                            <administratorRequired>false</administratorRequired>
                            <createZipball>true</createZipball>
                            <vmArgs>
                                <vmArg>--module-path=libs</vmArg>
                                <vmArg>--add-modules=javafx.controls,javafx.fxml</vmArg>
                            </vmArgs>
                            <jdkPath>/home/bad/Desktop/jdk-21.0.4-windows</jdkPath>
                            <assetsDir>/home/bad/repos/tsundoku/src/main/resources/assets</assetsDir>
                            <platform>windows</platform>
                            <winConfig>
                                <exeCreationTool>launch4j</exeCreationTool>
                                <icoFile>src/main/resources/assets/windows/tsundoku.ico</icoFile>
                            </winConfig>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>